--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   equatable: ^2.0.7
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
+  shadcn_ui: ^0.24.0
 
 dev_dependencies:
   flutter_test:
